--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
 }
 
 .container__sidebar {
-  width: 220px;
+  width: 240px;
   flex-direction: column;
   align-items: center;
   display: flex;
@@ -24,19 +24,39 @@
 }
 
 .label {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
+  width: 100%;
+  display: flex;
+  height: auto;
 }
 
 .container__items {
   display: flex;
   width: 100%;
-  justify-content: flex-start;
+  justify-content: center;
+  height: 40px;
+  align-items: center;
 }
 
 .item {
+  display: flex;
   padding: 3px;
   cursor: pointer;
+  border: 2px solid rgb(119, 113, 113);
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 2px;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  transition: 0.5s;
+
+  &:hover {
+    background: linear-gradient(196deg, rgba(233,66,255,1) 0%, rgba(136,56,255,1) 87%);
+    color: white;
+    border: 2px solid rgb(233, 97, 7);
+  }
 }
 
 .container__maps {
@@ -48,4 +68,14 @@
 #map {
   height: 100%;
   width: 100%;
+}
+
+@media screen and (max-width: 500px) {
+  .container__main {
+    flex-direction: column;
+  }
+  .container__sidebar {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
