--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,8 +2,10 @@
   <div class="container__sidebar">
     <span class="label">Book an appointment With your bank</span>
     <input type="text" class="input" placeholder="Filter by Name" (keyup)="onWrite(value.value)" #value>
-    <div class="container__items" *ngFor="let c of result">
-      <span class="item" (click)="onClick(c.id, c.coordLat, c.coordLon, c.zoom)">{{c.name}}</span>
+    <div class="wrap">
+      <div class="container__items" *ngFor="let c of result">
+        <span class="item" (click)="onClick(c.id, c.coordLat, c.coordLon, c.zoom)">{{c.name}}</span>
+      </div>
     </div>
     <span class="item" *ngIf="boolean">Nessuna Città</span>
   </div>
