--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
 }
 
 .container__sidebar {
-  width: 240px;
+  width: 17rem;
   flex-direction: column;
   align-items: center;
   display: flex;
@@ -31,12 +31,23 @@
   height: auto;
 }
 
+.wrap {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow: auto;
+}
+
 .container__items {
   display: flex;
   width: 100%;
   justify-content: center;
   height: 40px;
   align-items: center;
+
+  &:last-child {
+    margin-bottom: 20px;
+  }
 }
 
 .item {
@@ -73,9 +84,11 @@
 @media screen and (max-width: 500px) {
   .container__main {
     flex-direction: column;
+    height: 150vh;
   }
   .container__sidebar {
     width: 90%;
     margin: 0 auto;
+    height: 400px;
   }
 }
