--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -13,3 +13,7 @@
     <div id="map"></div>
   </div>
 </div>
+
+<div class="container__icon">
+  <div class="icon"(click)="onClickIcon()" ><i class="fas fa-arrow-up"></i></div>
+</div>
