--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -17,3 +17,10 @@
 <div class="container__icon">
   <div class="icon"(click)="onClickIcon()" ><i class="fas fa-arrow-up"></i></div>
 </div>
+
+<div class="container__datepicker" style="display: flex;" *ngIf="getIpService.datepicker">
+  <mat-card class="demo-inline-calendar-card">
+    <mat-calendar (selectedChange)="selected = $event"></mat-calendar>
+  </mat-card>
+  <p>Selected date: {{selected}}</p>
+</div>
