--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,6 +11,11 @@
   </div>
   <!-- DatePicker -->
   <div class="container__datepicker" *ngIf="getIpService.datepicker">
+
+    <div class="container__name datepicker">
+      <input type="text" placeholder="Insert Name" class="name" #name>
+    </div>
+
     <div class="datepicker" >
       <mat-form-field appearance="fill" >
         <input matInput [matDatepicker]="picker" #datepickeer (dateInput)="addEvent('input', $event)"
@@ -20,7 +25,7 @@
       </mat-form-field>
 
       <div class="container__submit">
-        <span class="items" (click)="onClickSalva(events[0])">Salva</span>
+        <span class="items" (click)="onClickSalva(events[0], name.value)">Salva</span>
         <span class="items" (click)="onClickAnnulla()">Annulla</span>
       </div>
     </div>
