--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -94,6 +94,7 @@
 .container__datepicker {
   position: absolute;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   width: 100%;
   height: 100vh;
@@ -103,12 +104,23 @@
 .datepicker {
   z-index: 10;
   width: 300px;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  height: 100px;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  padding: 7px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: white;
+}
+
+.name {
+  border: 0;
+  border-bottom: 1px solid;
+  width: 64%;
+  margin-left: -11px;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .container__submit {
