--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,8 +1,14 @@
-<ul>
-  <li *ngFor="let d of datepicker">
+<ul *ngFor="let d of datepicker">
+  <li> Data:
     {{d.data | date}}
+  </li>
+  <li> Id:
     {{d.Id}}
+  </li>
+  <li> Cittá:
     {{d.Citta}}
+  </li>
+  <li> Nome Utente:
     {{d.Name}}
   </li>
 </ul>
