--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -136,6 +136,7 @@
   cursor: pointer;
   border: 2px solid #777171;
   width: 80px;
+  font-size: 13px;
   margin: 0 auto;
   align-items: center;
   justify-content: center;
