--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -91,6 +91,7 @@
   display: none;
 }
 
+
 .container__datepicker {
   position: absolute;
   display: flex;
@@ -101,15 +102,34 @@
   align-items: center;
 }
 
-.datepicker {
+.container__name {
   z-index: 10;
   width: 300px;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
   padding: 7px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: white;
+}
+
+.wrap__items {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+}
+
+.datepicker {
+  z-index: 10;
+  width: 300px;
+  padding: 7px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: white;
+}
+
+.margin {
+  padding: 25px 0px 11px 0px;
 }
 
 .name {
