--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,16 +1,23 @@
-<div *ngFor="let d of datepicker">
-  <ul>
-    <li> Data:
-      {{d.data | date}}
-    </li>
-    <li> Id:
-      {{d.Id}}
-    </li>
-    <li> Cittá:
-      {{d.Citta}}
-    </li>
-    <li> Nome Utente:
-      {{d.Name}}
-    </li>
-  </ul>
+<div class="main">
+  <div class="container__list" *ngFor="let d of datepicker">
+    <ul class="list">
+      <li class="item">
+        <span class="label">Data: </span>
+        {{d.data | date}}
+      </li>
+      <li class="item">
+        <span class="label">Id: </span>
+        {{d?.Id}}
+      </li>
+      <li class="item">
+        <span class="label">Cittá: </span>
+        {{d?.Citta}}
+      </li>
+      <li class="item margin">
+        <span class="label">Nome:</span>
+        {{d.Name}}
+      </li>
+      <li class="item margin" style="justify-content: center; cursor: pointer;" (click)="onClickDelete(d.Id)">X</li>
+    </ul>
+  </div>
 </div>
