change logic id

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -28,6 +28,7 @@
             <button class="items" *ngIf="visibleSalva" (click)="onClickSalva(events[0])">Salva</button>
           <span class="items" (click)="onClickAnnulla()">Annulla</span>
         </div>
+        <span>{{getIpService.idNum}}</span>
       </div>
     </div>
   </div>
