--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,15 +10,15 @@
     <span class="item" *ngIf="boolean">Nessuna Città</span>
   </div>
   <!-- DatePicker -->
-  <div class="container__datepicker" *ngIf="getIpService.datepicker">
+  <div class="container__datepicker" [ngClass]="{'active': getIpService.datepicker === true}">
     <div class="wrap__items">
       <div class="container__name margin">
         <input type="text" placeholder="Insert Name" class="name" #name (keyup)="getName(name.value)" required>
       </div>
 
       <div class="datepicker">
-        <mat-form-field appearance="fill" >
-          <input matInput [matDatepicker]="picker" #datepickeer (dateInput)="addEvent('input', $event)" required
+        <mat-form-field appearance="fill" style="zoom: 66%; width: 79%;">
+          <input matInput [matDatepicker]="picker" (dateInput)="addEvent('input', $event)" required
             (dateChange)="addEvent('change', $event)">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
@@ -28,7 +28,6 @@
             <button class="items" *ngIf="visibleSalva" (click)="onClickSalva(events[0])">Salva</button>
           <span class="items" (click)="onClickAnnulla()">Annulla</span>
         </div>
-        <span>{{getIpService.idNum}}</span>
       </div>
     </div>
   </div>
