--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   align-items: center;
   display: flex;
-  padding: 15px 15px 0px 15px;
+  padding: 15px 0px 0px 0px;
 }
 
 .input {
@@ -30,6 +30,7 @@
   width: 100%;
   display: flex;
   height: auto;
+  padding-left: 25px;
 }
 
 .wrap {
@@ -100,6 +101,31 @@
   width: 100%;
   height: 100vh;
   align-items: center;
+  opacity: 0;
+  top: -200%;
+  transform: translate(-50%, 0%) scale(0.5);
+}
+
+.container__datepicker.active {
+  opacity: 1;
+  top: 50%;
+  z-index: 10;
+  transform: translate(0%, -50%) scale(1);
+  transition: transform 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19);
+}
+
+.container__datepicker.remove {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  opacity: 0;
+  top: -200%;
+  transform: translate(-50%, 0%) scale(0.5);
+  transition: all 300ms ease-in-out;
 }
 
 .container__name {
