--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+::-webkit-scrollbar {
+  width: 6px;
+}
+  ::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+  ::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius:10px;
+}
+::-webkit-scrollbar-thumb:hover {
+
+  background: #555;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
