--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
     <span class="item" *ngIf="boolean">Nessuna Città</span>
   </div>
   <!-- DatePicker -->
-  <div class="container__datepicker" [ngClass]="{'active': getIpService.datepicker === true}">
+  <div class="container__datepicker" [ngClass]="{'active': getIpService.datepicker === true, 'remove': getIpService.datepicker === false}">
     <div class="wrap__items">
       <div class="container__name margin">
         <input type="text" placeholder="Insert Name" class="name" #name (keyup)="getName(name.value)" required>
