--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -102,8 +102,8 @@
   height: 100vh;
   align-items: center;
   opacity: 0;
-  top: -200%;
-  transform: translate(-50%, 0%) scale(0.5);
+  top: -100%;
+  transform: translate(0%, 0%) scale(0.5);
 }
 
 .container__datepicker.active {
@@ -111,7 +111,7 @@
   top: 50%;
   z-index: 10;
   transform: translate(0%, -50%) scale(1);
-  transition: transform 300ms cubic-bezier(0.18, 0.89, 0.43, 1.19);
+  transition: transform 300ms cubic-bezier(0.07, 0.77, 0.79, 1.19);
 }
 
 .container__datepicker.remove {
@@ -123,9 +123,10 @@
   height: 100vh;
   align-items: center;
   opacity: 0;
-  top: -200%;
-  transform: translate(-50%, 0%) scale(0.5);
+  top: -100%;
+  transform: translate(0%, 0%) scale(0.5);
   transition: all 300ms ease-in-out;
+  z-index: 10;
 }
 
 .container__name {
