--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -29,8 +29,20 @@
   font-weight: bold;
   width: 100%;
   display: flex;
+  flex-direction: column;
   height: auto;
   padding-left: 25px;
+}
+
+.fa-list {
+  cursor: pointer;
+}
+
+.container__list__icon {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin: 10px 0px 0px -10px;
 }
 
 .wrap {
@@ -92,7 +104,6 @@
   display: none;
 }
 
-
 .container__datepicker {
   position: absolute;
   display: flex;
@@ -153,6 +164,7 @@
   flex-direction: column;
   align-items: center;
   background: white;
+  margin-top: -1px;
 }
 
 .margin {
