--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,3 +1,12 @@
+<div class="container__label">
+  <span class="label__bank">
+    <span class="container__icon" (click)="onClickArrow()">
+      <i class="fas fa-arrow-left"></i>
+    </span>
+    Bank Appointments
+  </span>
+</div>
+
 <div class="main">
   <div class="container__list" *ngFor="let d of datepicker">
     <ul class="list">
