add login template

--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="container__label">
+<div class="container__label" *ngIf="dataFiltrato">
   <span class="label__bank">
     <span class="container__icon" (click)="onClickArrow()">
       <i class="fas fa-arrow-left"></i>
