--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="limiter">
   <div class="container-login100" style="background-image: url('./../../../assets/images/bg-01.jpg');">
     <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
-      <form class="login100-form validate-form flex-sb flex-w">
+      <form class="login100-form validate-form flex-sb flex-w" [formGroup]="profileForm">
         <span class="login100-form-title p-b-53">
           Sign In With
         </span>
@@ -23,7 +23,7 @@
           </span>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Username is required">
-          <input class="input100" type="text" name="username">
+          <input class="input100" type="text" name="username" #username>
           <span class="focus-input100"></span>
         </div>
 
@@ -37,12 +37,12 @@
           </a>
         </div>
         <div class="wrap-input100 validate-input" data-validate="Password is required">
-          <input class="input100" type="password" name="pass">
+          <input class="input100" type="password" name="pass" #password>
           <span class="focus-input100"></span>
         </div>
 
         <div class="container-login100-form-btn m-t-17">
-          <button class="login100-form-btn">
+          <button class="login100-form-btn" (click)="onClick($event)">
             Sign In
           </button>
         </div>
@@ -60,6 +60,5 @@
     </div>
   </div>
 </div>
-
 
 <div id="dropDownSelect1"></div>
