--- a/src/styles.scss
+++ b/src/styles.scss
@@ -333,8 +333,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
   
   .fa-facebook-square {
-	width: 31px;
-	height: 42px;
+	zoom: 210%;
   }
   
   .label__icon {
