--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -14,6 +14,26 @@
   padding: 15px 0px 0px 0px;
 }
 
+.container__button {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: auto;
+}
+
+.button {
+  border: 2px solid red;
+  border-radius: 4px;
+  padding: 5px;
+  transition: 0.5s;
+
+  &:hover {
+    background: red;
+    color: white;
+    zoom: 110%;
+  }
+}
+
 .input {
   border: 0;
   border-bottom: 2px solid black;
@@ -105,24 +125,20 @@
 }
 
 .container__datepicker {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100vh;
   align-items: center;
   opacity: 0;
   top: -100%;
-  transform: translate(0%, 0%) scale(0.5);
 }
 
 .container__datepicker.active {
+  display: flex;
+  justify-content: center;
   opacity: 1;
-  top: 50%;
-  z-index: 10;
-  transform: translate(0%, -50%) scale(1);
-  transition: transform 300ms cubic-bezier(0.07, 0.77, 0.79, 1.19);
+  z-index: 3;
+  height: 100vh;
+  transform: translate(0%, 0%) scale(1);
+  transition: transform 300ms;
+  
 }
 
 .container__datepicker.remove {
@@ -135,9 +151,17 @@
   align-items: center;
   opacity: 0;
   top: -100%;
-  transform: translate(0%, 0%) scale(0.5);
+  transform: translate(0%, 20%) scale(0.5);
   transition: all 300ms ease-in-out;
-  z-index: 10;
+  z-index: -1;
+}
+
+.wrap__datepicker {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .container__name {
