--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -83,6 +83,7 @@
   border: 0;
   border-bottom: 2px solid black;
   margin: 30px 0px;
+  z-index: 4;
 
   &:focus {
     outline: none;
@@ -284,6 +285,84 @@
   }
 }
 
+// Modal success
+.container__success__data {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  top: 36%;
+  z-index: 10;
+}
+
+.success {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  border-radius: 4px;
+  width: 350px;
+  height: 220px;
+  background-color: white;
+}
+
+.top__success {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
+  width: 100%;
+  background-color: green;
+}
+
+.fa-check-circle {
+  width: 40px;
+  height: 40px;
+  color: white;
+}
+
+.bottom__success {
+  margin: 20px 0px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.label__success {
+  color: green;
+  font-size: 24px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+}
+
+.success__label {
+  color: rgb(107, 110, 107);
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  margin: 0px 0px 20px 0px;
+}
+
+.button__modal {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.modal__close {
+  border: 2px solid black;
+  padding: 5px;
+  border-radius: 4px;
+  transition: .5s;
+
+  &:hover {
+    background-color: black;
+    color: white;
+  }
+}
+
+
 @media screen and (max-width: 500px) {
   .container__main {
     flex-direction: column;
@@ -293,6 +372,10 @@
     width: 90%;
     margin: 0 auto;
     height: 400px;
+  }
+
+  .success {
+    width: 90%;
   }
 
   .container__icon {
